--- a/README.asciidoc
+++ b/README.asciidoc
@@ -61,8 +61,11 @@ CLCACHE_CL::
     mentioned by the `%PATH%` environment variable to compute the absolute
     path.
 CLCACHE_LOG::
-    If this variable is set, a bit of diagnostic information is printed which
-    can help with debugging cache problems.
+    If this variable is set, a bit of diagnostic information is printed to
+    show cache operations.
+CLCACHE_LOG_VERBOSE::
+    If this variable is set, a lot of diagnostic information is printed to
+     help with debugging cache problems.
 CLCACHE_DISABLE::
     Setting this variable will disable 'clcache.py' completely. The script will
     relay all calls to the real compiler.
